version 0.3.2dev:

- Added support for cygwin platform.

version 0.3.1:

- SPACE in minibuffer does completion only if a completion method is
  defined.
- better C-x k support (initial patch by Manuel Novoa III)
- added set-tab-width, set-indent-width and set-indent-tabs-mode
- probe mode for new file (patch by Manuel Novoa III)
- force blocking mode for tty (patch by Manuel Novoa III)
- improved image mode (full alpha channel support, full conversion,
  use improved FFmpeg image conversion routines).
- video mode can change audio and video chanels.

version 0.3:

- added Latex mode (Martin Hedenfalk)
- added '/' in directory completion (Martin Hedenfalk)
- fixed offset when loading buffer (Martin Hedenfalk)
- error when loading DLL (Martin Hedenfalk)
- added toggle full screen command (bound to C-x f or f if suitable)
  (useful for image/video modes)
- added toggle-mode-line.
- various image/video mode fixes.
- began separating the libqhtml library from the qemacs core

version 0.3pre13:

- added FFmpeg based image and audio/video modes.
- added C-o, M-d, M-backspace, C-g for minibuffer exit and space for
  completion in minibuffer (thanks to Leigh L. Klotz).
- 'Busy' state is indicated with a 'B' in status (-B:--).
- when installing, 'qemacs' is standard name, and 'qe' is a link.
- added custom configure script.
- added emacs-like quit confirmation (ask to save each file).
- added S-TAB key.
- fixed shell bug if multiple window (tab_size must be set to 8).
- added [down|up]case-[word|region] commands.
- added HebrewIsraeli keymap

version 0.3pre12:

- added C-x C-x.
- XML/HTML/CSS2: many bug fixes, improved inline formatting quality.
- improved DocBook support.
- (re)activated full bidi handling in HTML/CSS2 mode. Added support
  for RLO/LRO/RLE/LRO/PDF and associated CSS properties. Added
  'bidi-mode' CSS property for bidi algorithm testing.
- added documentation in qe-doc.html.
- added 'set-system-font' configuration command (see config.eg) and